--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "main-store-api": "file:",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
     "mysql2": "^3.14.1"
